--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -11,10 +11,14 @@
         android:id="@+id/calc_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/rounded_corner_view"
+        android:backgroundTint="@color/black"
+        android:fontFamily="@font/cairo"
         android:text="@string/zin_text"
-        android:textColor="@color/black"
+        android:textColor="@android:color/holo_orange_light"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/second_editText" />
 
@@ -23,10 +27,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="@color/white"
+        android:background="@drawable/rounded_corner_view"
         android:ems="10"
+
+        android:fontFamily="@font/cairo"
         android:hint="@string/enter_second"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="@+id/first_editText"
         app:layout_constraintStart_toStartOf="@+id/first_editText"
         app:layout_constraintTop_toBottomOf="@+id/first_editText" />
@@ -38,10 +45,11 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
-        android:background="@color/white"
-        android:ems="10"
+        android:background="@drawable/rounded_corner_view"
+        android:fontFamily="@font/cairo"
         android:hint="@string/enter_first"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,6 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:fontFamily="@font/cairo"
         android:text="@string/label_text"
         android:textAlignment="center"
         android:textColor="@android:color/holo_orange_light"
@@ -69,6 +78,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
+        android:fontFamily="@font/cairo"
         android:text="@string/notes_label"
         android:textAlignment="center"
         android:textColor="@android:color/holo_orange_light"
@@ -82,6 +92,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:fontFamily="@font/cairo"
         android:text="@string/notes"
         android:textColor="@android:color/holo_orange_light"
         app:layout_constraintEnd_toEndOf="@+id/notes_label_text"
